<resources>
    <string name="app_name">SP20_BSE_001_Assi_1</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnclear">Clear</string>
    <string name="btnopen">open</string>
    <string name="code">0000</string>



</resources>